# warp_square_engine

./: Cargo.toml
.github/workflows/: java.yml
binding/lib/: build.gradle
binding/src/: cs_glue.in.rs  java_glue.in.rs
examples/: sandbox.rs  simple.rs
java/: Cargo.toml  build.rs
java/flapigen_test_dotnet/: flapigen_test_dotnet.cs
java/lib/: build.gradle
java/lib/src/main/java/club/gamza/warpsquare/engine/: BoardMove.java  Game.java  NativeUtils.java
java/src/: cs_glue.in.rs  java_glue.in.rs  lib.rs
java/warp_square_engine/: warp_square_engine.cs
python/examples/: main.py
python/src/: lib.rs
src/: bit_board.rs  bit_board_set.rs  board.rs  board_set.rs  board_type.rs  chess_move.rs  color_mask.rs  game.rs  lib.rs  piece.rs  square.rs  unit_test.rs
